My first commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section>
     <h2></h2>
     <ul>
-        <li><img width="" height="" src="image/photo1.png" alt="photo 1"></li>
+        <li><img width="360px" height="300px" src="image/photo1.png" alt="photo 1"></li>
         <li></li>
         <li></li>
     </ul>
