My second commit

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <h2></h2>
     <ul>
         <li><img width="360px" height="300px" src="image/photo1.png" alt="photo 1"></li>
-        <li></li>
-        <li></li>
+        <li><img width="360px" height="300px" src="image/photo2.png" alt="photo 2"></li>
+        <li><img width="360px" height="300px" src="image/photo3.png" alt="photo 3"></li>
     </ul>
 </section>
 
