--- a/index.html
+++ b/index.html
@@ -36,7 +36,34 @@
 
 <section>
     <ul>
-        <li></li>
+        <li>
+           <h3>
+            Strategy
+           </h3>
+        Our goal is to identify the business
+        problem to walk away with the perfect and creative solution.
+        </li>
+        <li>
+            <h3>
+                Punctuality
+            </h3>
+            Bring the key message to the brand's audience for the best price within the shortest possible time.
+        </li>
+
+        <li>
+            <h3>
+                Diligence
+            </h3>
+            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+        </li>
+        
+        <li>
+            <h3>
+                Technologies
+            </h3>
+            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+        </li>
+    
     </ul>
 </section>
 
