--- a/index.html
+++ b/index.html
@@ -68,12 +68,67 @@
 </section>
 
 <section>
-    <h2></h2>
+    <h2>What are we doing</h2>
     <ul>
         <li><img width="360px" height="300px" src="image/photo1.png" alt="photo 1"></li>
         <li><img width="360px" height="300px" src="image/photo2.png" alt="photo 2"></li>
         <li><img width="360px" height="300px" src="image/photo3.png" alt="photo 3"></li>
     </ul>
+</section>
+
+<section>
+    <h2>
+        Our Team
+    </h2>
+    <ul>
+        <li><figure>
+            <img width="264px" height="260px" src="image/TeamCard1.png" alt="TeamCard1">
+            <figcaption>
+                <h3>
+                    Mark Guerrero
+                </h3>
+                <p>Product Designer</p>
+            </figcaption>
+        </figure>
+        </li>
+
+        <li>
+            <figure>
+                <img width="264px" height="260px" src="image/TeamCard2.png" alt="TeamCard2">
+                <figcaption>
+                    <h3>
+                        Tom Ford
+                    </h3>
+                    <p>Frontend Developer</p>
+                </figcaption>
+            </figure>
+        </li>
+
+        <li>
+            <figure>
+                <img width="264px" height="260px" src="image/TeamCard3.png" alt="TeamCard3">
+                <figcaption>
+                    <h3>
+                        Camila Garcia
+                    </h3>
+                    <p>Marketing</p>
+                </figcaption>
+            </figure>
+        </li>
+
+        <li>
+            <figure>
+                <img width="264px" height="260px" src="image/TeamCard4.png" alt="TeamCard4">
+                <figcaption>
+                    <h3>
+                        Daniel Wilson
+                    </h3>
+                    <p>UI Designer</p>
+                </figcaption>
+            </figure>
+        </li>
+    </ul>
+
 </section>
 
     </main>
