--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </nav>
     </header>
 
-    <main>
-
+    <main> 
+    
 <section>
     <h1>Effective Solutionsfor Your Business</h1>
     <button>Order Service</button>
@@ -70,9 +70,9 @@
 <section>
     <h2>What are we doing</h2>
     <ul>
-        <li><img width="360px" height="300px" src="image/photo1.png" alt="photo 1"></li>
-        <li><img width="360px" height="300px" src="image/photo2.png" alt="photo 2"></li>
-        <li><img width="360px" height="300px" src="image/photo3.png" alt="photo 3"></li>
+        <li><img width="360px" height="300px" src="images/photoa.jpg" alt="photoa"></li>
+        <li><img width="360px" height="300px" src="images/photob.jpg" alt="photob"></li>
+        <li><img width="360px" height="300px" src="images/photoc.jpg" alt="photoc"></li>
     </ul>
 </section>
 
@@ -81,8 +81,9 @@
         Our Team
     </h2>
     <ul>
-        <li><figure>
-            <img width="264px" height="260px" src="image/TeamCard1.png" alt="TeamCard1">
+        <li>
+            <figure>
+            <img width="264px" height="260px" src="images/teamcarda.jpg" alt="teamcarda">
             <figcaption>
                 <h3>
                     Mark Guerrero
@@ -94,7 +95,7 @@
 
         <li>
             <figure>
-                <img width="264px" height="260px" src="image/TeamCard2.png" alt="TeamCard2">
+                <img width="264px" height="260px" src="images/teamcardb.jpg" alt="teamcardb">
                 <figcaption>
                     <h3>
                         Tom Ford
@@ -106,7 +107,7 @@
 
         <li>
             <figure>
-                <img width="264px" height="260px" src="image/TeamCard3.png" alt="TeamCard3">
+                <img width="264px" height="260px" src="images/teamcardc.jpg" alt="teamcardc">
                 <figcaption>
                     <h3>
                         Camila Garcia
@@ -118,7 +119,7 @@
 
         <li>
             <figure>
-                <img width="264px" height="260px" src="image/TeamCard4.png" alt="TeamCard4">
+                <img width="264px" height="260px" src="images/teamcardd.png" alt="teamcardd">
                 <figcaption>
                     <h3>
                         Daniel Wilson
