--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <li><a href="tel:+11(000)111-11-11">+11(000)11-111-11</a>
         </li>
     </ul>
     
@@ -37,9 +37,9 @@
 <section>
     <ul>
         <li>
-           <h3>
+        <h3>
             Strategy
-           </h3>
+        </h3>
         Our goal is to identify the business
         problem to walk away with the perfect and creative solution.
         </li>
@@ -70,9 +70,15 @@
 <section>
     <h2>What are we doing</h2>
     <ul>
-        <li><img width="360px" height="300px" src="images/photoa.jpg" alt="photoa"></li>
-        <li><img width="360px" height="300px" src="images/photob.jpg" alt="photob"></li>
-        <li><img width="360px" height="300px" src="images/photoc.jpg" alt="photoc"></li>
+        <li>
+            <img width="360px" height="300px" src="images/photoa.jpg" alt="photoa">
+        </li>
+        <li>
+            <img width="360px" height="300px" src="images/photob.jpg" alt="photob">
+        </li>
+        <li>
+            <img width="360px" height="300px" src="images/photoc.jpg" alt="photoc">
+        </li>
     </ul>
 </section>
 
