--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <li>
             <figure>
-                <img width="264px" height="260px" src="images/teamcardd.png" alt="teamcardd">
+                <img width="264px" height="260px" src="images/teamcardd.jpg" alt="teamcardd">
                 <figcaption>
                     <h3>
                         Daniel Wilson
@@ -138,8 +138,12 @@
 
 </section>
 
+<footer>
+    <a href="">WEBSTUDIO</a>
+    <p>
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+    </p>
+</footer>
     </main>
-
-
 </body>
 </html>
