--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio 3.0</title>
+    <title>Webstudio</title>
 </head>
 <body>
     
@@ -16,21 +16,23 @@
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
     </ul>
+    </nav>
     <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li><a href="tel:+11(000)111-11-11">+11(000)11-111-11</a>
         </li>
     </ul>
-    
-    </nav>
     </header>
     <main> 
 <section>
     <h1>Effective Solutionsfor Your Business</h1>
-    <button>Order Service</button>
+    <button type="button">Order Service</button>
 </section>
 <section>
+    <h2> 
+        Our Feature
+    </h2>
     <ul>
         <li>
         <h3>
@@ -79,48 +81,32 @@
     </h2>
     <ul>
         <li>
-            <figure>
             <img width="264" height="260" src="images/teamcarda.jpg" alt="teamcarda">
-            <figcaption>
                 <h3>
                     Mark Guerrero
                 </h3>
                 <p>Product Designer</p>
-            </figcaption>
-        </figure>
         </li>
         <li>
-            <figure>
                 <img width="264" height="260" src="images/teamcardb.jpg" alt="teamcardb">
-                <figcaption>
                     <h3>
                         Tom Ford
                     </h3>
                     <p>Frontend Developer</p>
-                </figcaption>
-            </figure>
         </li>
         <li>
-            <figure>
                 <img width="264" height="260" src="images/teamcardc.jpg" alt="teamcardc">
-                <figcaption>
                     <h3>
                         Camila Garcia
                     </h3>
                     <p>Marketing</p>
-                </figcaption>
-            </figure>
         </li>
         <li>
-            <figure>
                 <img width="264" height="260" src="images/teamcardd.jpg" alt="teamcardd">
-                <figcaption>
                     <h3>
                         Daniel Wilson
                     </h3>
                     <p>UI Designer</p>
-                </figcaption>
-            </figure>
         </li>
     </ul>
 </section>
