--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <img width="360" height="300" src="images/photoa.jpg" alt="photoa">
         </li>
         <li>
-            <img width="360" height="300" src="images/photob.jpg" alt="photob">
+            <img width="360" height="300" src="images/photobb.jpg" alt="photobb">
         </li>
         <li>
-            <img width="360" height="300" src="images/photoc.jpg" alt="photoc">
+            <img width="360" height="300" src="images/photocc.jpg" alt="photocc">
         </li>
     </ul>
 </section>
@@ -88,7 +88,7 @@
                 <p>Product Designer</p>
         </li>
         <li>
-                <img width="264" height="260" src="images/teamcardb.jpg" alt="teamcardb">
+                <img width="264" height="260" src="images/teamcardbb.jpg" alt="teamcardbb">
                     <h3>
                         Tom Ford
                     </h3>
