--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <h2>What are we doing</h2>
     <ul>
         <li>
-            <img width="360" height="300" src="images/photoa.jpg" alt="photoa">
+            <img width="360" height="300" src="img/photoa.jpg" alt="photoa">
         </li>
         <li>
-            <img width="360" height="300" src="images/photobb.jpg" alt="photobb">
+            <img width="360" height="300" src="img/photobb.jpg" alt="photobb">
         </li>
         <li>
-            <img width="360" height="300" src="images/photocc.jpg" alt="photocc">
+            <img width="360" height="300" src="img/photocc.jpg" alt="photocc">
         </li>
     </ul>
 </section>
@@ -81,28 +81,28 @@
     </h2>
     <ul>
         <li>
-            <img width="264" height="260" src="images/teamcarda.jpg" alt="teamcarda">
+            <img width="264" height="260" src="img/teamcarda.jpg" alt="teamcarda">
                 <h3>
                     Mark Guerrero
                 </h3>
                 <p>Product Designer</p>
         </li>
         <li>
-                <img width="264" height="260" src="images/teamcardbb.jpg" alt="teamcardbb">
+                <img width="264" height="260" src="img/teamcardbb.jpg" alt="teamcardbb">
                     <h3>
                         Tom Ford
                     </h3>
                     <p>Frontend Developer</p>
         </li>
         <li>
-                <img width="264" height="260" src="images/teamcardc.jpg" alt="teamcardc">
+                <img width="264" height="260" src="img/teamcardc.jpg" alt="teamcardc">
                     <h3>
                         Camila Garcia
                     </h3>
                     <p>Marketing</p>
         </li>
         <li>
-                <img width="264" height="260" src="images/teamcardd.jpg" alt="teamcardd">
+                <img width="264" height="260" src="img/teamcardd.jpg" alt="teamcardd">
                     <h3>
                         Daniel Wilson
                     </h3>
